<resources>

    <string name="app_name">在线掌上学习平台</string>

    <string name="create_account">注册帐号</string>
    <string name="login">登录帐号</string>
    <string name="login_others">游客模式</string>
    <string name="sign_up">注册</string>
    <string name="register">帐号注册</string>
    <string name="name">请输入名字</string>
    <string name="phone">请输入常用手机电话</string>
    <string name="password">请输入密码</string>
    <string name="account">请输入注册帐号</string>
    <string name="rePassword">请确认密码</string>
    <string name="sign_in">账号登陆</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_name">AnyWork</string>
    <string name="login">登录</string>
    <string name="email">邮箱</string>
    <string name="forget_password">忘记密码？</string>

    <string name="info">个人信息</string>
    <string name="paper">试卷</string>
    <string name="inform">公告</string>
    <string name="password">密码</string>
    <string name="forget_password">forget  Password?</string>
    <string name="register">注册</string>
    <string name="name">名字</string>
    <string name="phone">电话</string>
    <string name="create_account">创建帐号</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- paper feature -->
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="paper_header_name">Yason</string>
    <string name="paper_header_url">913904049@qq.com</string>
    <string name="edit">编辑</string>
    <string name="my_name">昵称</string>
    <string name="my_account">帐号</string>
    <string name="account2">请输入帐号</string>
    <string name="phone2">请输入电话号码</string>
    <string name="my_phone">手机号码</string>


</resources>
