<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorAccent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/head_pic"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="127dp"
        android:src="@mipmap/ic_launcher"
        app:civ_border_color="@color/AnyWork_light"
        app:civ_border_width="2dp"/>

    <Button
        android:id="@+id/edit"
        android:layout_width="82dp"
        android:layout_height="36dp"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="end"
        android:text="@string/edit"
        android:textColor="@color/AnyWork_light"
        android:textSize="20sp"
        android:background="@drawable/bg_btn_yellow"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="240dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_name"
            android:textSize="22sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/name"
            style="@style/AnyWork.Theme.EditText2"
            android:hint="@string/name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/my_account"
            android:textSize="22sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/mail"
            style="@style/AnyWork.Theme.EditText2"
            android:hint="@string/account2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/my_phone"
            android:textSize="22sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/phone"
            style="@style/AnyWork.Theme.EditText2"
            android:hint="@string/phone2"
            android:inputType="phone" />

        <ImageView
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            app:srcCompat="@mipmap/ic_launcher"/>

    </LinearLayout>

</FrameLayout>